test/fails/bad_parsing/bad_access1.lgl
void main() {
    print [1., 2.][1, 2];
}